--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "bcrypt": "^3.0.5",
     "express": "^4.16.4",
+    "fullcalendar-reactwrapper": "^1.0.7",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.22",
     "morgan": "^1.9.1",
     "react": "^16.8.6",
+    "react-dates": "^20.1.0",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
