--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "dateformat": "^3.0.3",
     "express": "^4.16.4",
     "fullcalendar-reactwrapper": "^1.0.7",
     "jsonwebtoken": "^8.5.1",
@@ -11,6 +12,7 @@
     "mongoose": "^5.4.22",
     "morgan": "^1.9.1",
     "react": "^16.8.6",
+    "react-calendar": "^2.19.0",
     "react-dates": "^20.1.0",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
